Add questionCount param to [GET] api/questions
