# openapi.json
@@ -28,6 +28,14 @@
             }
           },
           {
+            "name": "questionCount",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
             "name": "tags",
             "in": "query",
             "schema": {
